--- a/src/app/administrador/pages/lista-clientes/lista-clientes.component.html
+++ b/src/app/administrador/pages/lista-clientes/lista-clientes.component.html
@@ -31,12 +31,8 @@
                                           <td>
                                             <button
                                               _ngcontent-eux-c77=""
-                                              class="me-2 m-0 p-0 shadow-0 btn btn-lg text-dark"
-                                            >
-                                              <i _ngcontent-eux-c77="" class="far fa-edit"></i></button
-                                            ><button
-                                              _ngcontent-eux-c77=""
                                               class="m-0 p-0 shadow-0 btn btn-lg text-dark"
+                                              (click)="[deleteCliente(cliente),deleteUsuarioPeticions(cliente.idCliente)]"
                                             >
                                               <i _ngcontent-eux-c77="" class="far fa-trash-alt"></i>
                                             </button>
