--- a/src/app/administrador/pages/lista-estudiantes/lista-estudiantes.component.html
+++ b/src/app/administrador/pages/lista-estudiantes/lista-estudiantes.component.html
@@ -38,14 +38,11 @@
             <td>{{ estudiante.semestre }}</td>
             <td>{{ estudiante.estado }}</td>
             <td>
-                <button
-                  _ngcontent-eux-c77=""
-                  class="me-2 m-0 p-0 shadow-0 btn btn-lg text-dark"
-                >
-                  <i _ngcontent-eux-c77="" class="far fa-edit"></i></button
-                ><button
+               <button
                   _ngcontent-eux-c77=""
                   class="m-0 p-0 shadow-0 btn btn-lg text-dark"
+                  (click)="[deleteEstudiante(estudiante), deleteUsuarioPeticions(estudiante.idEstudiante)]"
+
                 >
                   <i _ngcontent-eux-c77="" class="far fa-trash-alt"></i>
                 </button>
