--- a/src/app/administrador/pages/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/administrador/pages/lista-usuarios/lista-usuarios.component.html
@@ -23,14 +23,10 @@
             <td>{{ usuario.correo }}</td>
             <td>{{ usuario.tipoUsuario }}</td>
             <td>
-              <button
-                _ngcontent-eux-c77=""
-                class="me-2 m-0 p-0 shadow-0 btn btn-lg text-dark"
-              >
-                <i _ngcontent-eux-c77="" class="far fa-edit"></i></button
-              ><button
+             <button
                 _ngcontent-eux-c77=""
                 class="m-0 p-0 shadow-0 btn btn-lg text-dark"
+                (click)="deleteUsuario(usuario.idUsuario,usuario.tipoUsuario)"
               >
                 <i _ngcontent-eux-c77="" class="far fa-trash-alt"></i>
               </button>
